Fix line wrap on details page

--- a/src/pages/details.scss
+++ b/src/pages/details.scss
@@ -1,5 +1,5 @@
 page-details {
   .pre {
-    white-space: pre;
+    white-space: pre-wrap;
   }
 }
